--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,8 @@ tempdata/
 
 ##MLJ Added for Spark
 .vagrant/
+data/conditioned/archive/nsimatrix.p
+data/conditioned/archive/asimatrix.p
 data/conditioned/nsimatrix.p
 data/conditioned/asimatrix.p
 data/harvested/lw-raw-lyrics
