added some restrictions to .gitignore for resources in data dir (and mj notebooks)

--- a/.gitignore
+++ b/.gitignore
@@ -90,9 +90,42 @@ tempdata/
 
 ##MLJ Added for Spark
 .vagrant/
-data/conditioned/archive/nsimatrix.p
-data/conditioned/archive/asimatrix.p
-data/conditioned/nsimatrix.p
-data/conditioned/asimatrix.p
+
 data/harvested/lw-raw-lyrics
 data/harvested/lw-raw-lyrics-error
+
+data/conditioned/*
+!data/conditioned/*.7z
+!data/conditioned/*.csv
+!data/conditioned/*.md
+!data/conditioned/*/
+
+data/conditioned/archive/nsimatrix.p
+data/conditioned/archive/asimatrix.p
+
+data/conditioned/decades/*
+!data/conditioned/decades/*.7z
+
+notebooks/mj/*
+!notebooks/mj/*.ipynb
+!notebooks/mj/*.md
+!notebooks/mj/*/
+
+notebooks/mj/decades/*
+!notebooks/mj/decades/*.ipynb
+!notebooks/mj/decades/*/
+
+notebooks/mj/decades/1970/*
+!notebooks/mj/decades/1970/*.ipynb
+
+notebooks/mj/decades/1980/*
+!notebooks/mj/decades/1980/*.ipynb
+
+notebooks/mj/decades/1990/*
+!notebooks/mj/decades/1990/*.ipynb
+
+notebooks/mj/decades/2000/*
+!notebooks/mj/decades/2000/*.ipynb
+
+notebooks/mj/decades/2010/*
+!notebooks/mj/decades/2010/*.ipynb
