--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-less": "^1.1.0"
+  },
+  "dependencies": {
+    "crossfilter": "^1.3.12",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
